december_xxi + ch19

--- a/donate-finish.html
+++ b/donate-finish.html
@@ -65,12 +65,15 @@
         </script>
 
         <div>
+            <div style="margin-right: 10px; position: relative; display: inline-block;">
+                <a href="donate-create.html"><img src="images/general/donate_button.png"></a>
+            </div>
             <div class="dropdown" style="margin-right: -10px; position: relative; display: inline-block;">
                 <button class="btn btn-default dropdown-toggle" type="button" id="menu2" data-toggle="dropdown">
                     <img src="" id="preset_chapter" style="width: 28px; position: relative">
                     <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1" id="chapters_dropdown">
+                <ul class="dropdown-menu" style="width: max-content;" role="menu" aria-labelledby="menu1" id="chapters_dropdown">
                 </ul>
             </div>
             <div class="dropdown" style="margin-right: 40px; position: relative; display: inline-block;">
