--- a/index.html
+++ b/index.html
@@ -62,12 +62,15 @@
         </script>
 
         <div>
+            <div style="margin-right: 10px; position: relative; display: inline-block;">
+                <a href="donate-create.html"><img src="images/general/donate_button.png"></a>
+            </div>
             <div class="dropdown" style="margin-right: -10px; position: relative; display: inline-block;">
                 <button class="btn btn-default dropdown-toggle" type="button" id="menu2" data-toggle="dropdown">
                     <img src="" id="preset_chapter" style="width: 28px; position: relative">
                     <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1" id="chapters_dropdown">
+                <ul class="dropdown-menu" style="width: max-content;" role="menu" aria-labelledby="menu1" id="chapters_dropdown">
                 </ul>
             </div>
             <div class="dropdown" style="margin-right: 40px; position: relative; display: inline-block;">
@@ -120,6 +123,9 @@
     <div class="row">
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
+                <li><strong>Chapter 19 arrived!</strong> All buildings have been regenerated to contain values for chapter 19 (November 11th 2021)</li>
+                <li><strong>New tooltips!</strong> Many new tooltips have been added to the website - you can now hover your mouse over different goods and find what they are (November 11th 2021)</li>
+                <li><strong>Winter Magic event arrived!</strong> All buildings from this event are now in the database (November 11th 2021)</li>
                 <li><strong>New chapter selection feature on the website!</strong> You can now use the new dropdown menu in the right top corner of the website to choose your chapter, which will get remembered by your browser (October 18th 2021)</li>
                 <li><strong>The Misty Forest event arrived!</strong> All buildings from this event are now in the database (September 30th 2021)</li>
                 <li><strong>Autumn Zodiac event arrived!</strong> All buildings from this event are now in the database (August 19th 2021)</li>
@@ -139,7 +145,7 @@
         </div>
         <div class="col-md-6 col-sm-1 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_videos" class="col-md">
-                <li><strong>Videos on my channel</strong> - subscribe to stay with the latest videos! ><a href="https://www.youtube.com/channel/UCRzBOCps1xnc1h8xhNK2hzg"><img src="https://i.ibb.co/p1CLn99/EL-str-nka-youtube-button.png" width="30" style="position: relative;"></a><</li>
+                <li><strong>Videos on my channel</strong> - subscribe to stay with the latest videos! ><a href="https://www.youtube.com/channel/UCRzBOCps1xnc1h8xhNK2hzg?sub_confirmation=1"><img src="https://i.ibb.co/p1CLn99/EL-str-nka-youtube-button.png" width="30" style="position: relative;"></a><</li>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/n6alE-lETxc" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/sWa4cT4yGIA" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/aUgB0IihzLY" allowfullscreen="true"></iframe>
