--- a/events.html
+++ b/events.html
@@ -43,7 +43,9 @@
     <script src="database/languages/langUI.js"></script>
     <script src="database/languages/buildingNamesLanguages.js"></script>
     <script src="javascript/notificationHandler.js"></script>
-    <script src="database//notifications.js"></script>
+    <script src="database/notifications.js"></script>
+    <script src="database/quests.js"></script>
+    <script src="database/languages/quests_translations.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
@@ -105,7 +107,7 @@
     </nav>
 </head>
 
-<body onload="displayDailyPrizes()">
+<body onload="loadPage()">
 
 <!-- EXCEPTION HANDLER -->
 
@@ -116,27 +118,28 @@
     </button>
 </div>
 
-<div class="highest2 container bg-skin_background rounded-right75 border-bottom border-right border-top border-popup" style="width: 155px; height: 50px; margin-top: 274px; margin-left: 0px; position: fixed">
-    <div class="justify-content-center box d-flex flex-column" style="height: 100%;"><span class="align-middle"><a class="text-link font-weight-bold" id="calendar_top" href="#events_top"><img src="images/general/calendar.png" width="45" style="margin-right: 2px; position: relative;"></a></span></div>
-    <!--<div class="justify-content-center box d-flex flex-column" style="height: 33%;"><span class="align-middle"><a class="text-link font-weight-bold" id="quests_left_panel" href="#events_top"><img src="images/general/event_guide.png" width="30" style="margin-left: 5px; margin-right: 10px; position: relative;"></a></span></div>
-    <div class="justify-content-center box d-flex flex-column" style="height: 33%;"><span class="align-middle"><a class="text-link font-weight-bold" id="chests_left_panel" href="#events_top"><img src="images/general/chest_icon.png" width="30" style="margin-left: 5px; margin-right: 10px; position: relative;"></a></span></div>-->
+<div class="highest2 container bg-skin_background rounded-right75 border-bottom border-right border-top border-popup" style="width: 155px; height: 100px; margin-top: 274px; margin-left: 0px; position: fixed" id="left_bar">
+    <div class="justify-content-center box d-flex flex-column" style="height: 50%;"><span class="align-middle"><a class="text-link font-weight-bold" id="calendar_top" href="#calendar" onclick="switchView('calendar')"><img src="images/general/calendar.png" width="45" style="margin-left: -10px; margin-right: 2px; position: relative;"></a></span></div>
+    <div class="justify-content-center box d-flex flex-column" style="height: 50%;"><span class="align-middle"><a class="text-link font-weight-bold" id="quests_left_panel" href="#quests" onclick="switchView('quests')"><img src="images/general/event_guide.png" width="28" style="margin-left: 0px; margin-right: 10px; position: relative;"></a></span></div>
+    <!--<div class="justify-content-center box d-flex flex-column" style="height: 33%;"><span class="align-middle"><a class="text-link font-weight-bold" id="chests_left_panel" href="#events_top"><img src="images/general/chest_icon.png" width="30" style="margin-left: 5px; margin-right: 10px; position: relative;"></a></span></div>-->
 </div>
 
-<div style="padding-top: 59px;" id="events_top">
+<div style="padding-top: 59px;" id="calendar_top">
     <div style="width: 100%;">
         <div class="container-thick center bg-skin_astable_background rounded-bottom75" style="width: 100%; padding-top: 20px; padding-bottom: 15px; padding-left: 20px; padding-right: 20px;">
             <div class="row">
                 <div class="col-sm">
                     <div class="row center" style="height: 33%; vertical-align: middle">
                         <div class="col-sm">
-                            <center><label for="input_event" id="select_event_label" style="margin-left: 40px;"></label>
-                            <select id="input_event" class="custom-select" style="width: 80%;">
+                            <center><label for="input_event" id="select_event_label" style="margin-left: 20px;"></label>
+                            <select id="input_event" class="custom-select" style="width: 50%;" onchange="setView('calendar')">
 
                             </select>
                             </center>
                         </div>
                         <div class="col-sm">
-                            <center><label for="input_orderBy" id="order_daily_prizes_by_label"></label>
+                            <center>
+                                <label for="input_orderBy" id="order_daily_prizes_by_label"></label>
                                 <select id="input_orderBy" class="custom-select" style="width: 30%;" onchange="">
                                     <option value="day">Day</option>
                                     <option value="providedCulture">Culture per square</option>
@@ -147,28 +150,6 @@
                                     <option value="mana">Mana per square per 1h</option>
                                     <option value="seeds">Seeds per square per 1h</option>
                                 </select>
-                                <label for="input_chapter" class="d-inline-block" id="for_chapter_label"></label>
-                                    <select id="input_chapter" class="custom-select d-inline-block" style="width: 10%;" onchange="" disabled>
-                                        <option value="all_">All</option>
-                                        <option value="18">18</option>
-                                        <option value="17">17</option>
-                                        <option value="16">16</option>
-                                        <option value="15">15</option>
-                                        <option value="14">14</option>
-                                        <option value="13">13</option>
-                                        <option value="12">12</option>
-                                        <option value="11">11</option>
-                                        <option value="10">10</option>
-                                        <option value="9">9</option>
-                                        <option value="8">8</option>
-                                        <option value="7">7</option>
-                                        <option value="6">6</option>
-                                        <option value="5">5</option>
-                                        <option value="4">4</option>
-                                        <option value="3">3</option>
-                                        <option value="2">2</option>
-                                        <option value="1">1</option>
-                                    </select><img src="images/general/request_sign.png" style="margin-left: 5px;" width="30px" class="pointer" onclick="tempHint()" >
                             </center>
                         </div>
                     </div>
@@ -193,8 +174,9 @@
 <script>
     document.getElementById("select_event_label").innerHTML = langUI("Select event:");
     document.getElementById("order_daily_prizes_by_label").innerHTML = langUI("Order daily prizes by:");
-    document.getElementById("for_chapter_label").innerHTML = langUI("For chapter:");
     document.getElementById("calendar_top").innerHTML += langUI("Calendar");
+    document.getElementById("quests_left_panel").innerHTML += langUI("Quests");
+    if (localStorage.getItem("lang") !== "cz") {document.getElementById("quests_left_panel").style.visibility = "hidden";}
     /*document.getElementById("quests_left_panel").innerHTML += langUI("Quests");
     document.getElementById("chests_left_panel").innerHTML += langUI("Chests");*/
     document.getElementById("generate_daily_prizes_button").innerHTML += langUI("Generate Daily Prizes");
