Add Quests feature

--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@
     <!--<script src="javascript/all_buildings.js"></script>-->
     <script src="database/variousData.js"></script>
     <script src="database/dailyPrizes.js"></script>
-    <script src="javascript/all_events.js"></script>
+    <script src="javascript/all_events-03122021.js"></script>
     <script src="javascript/global_functions.js"></script>
     <script src="database/items.js"></script>
     <script src="database/languages/langUI.js"></script>
