Contact page corrections

--- a/contact.html
+++ b/contact.html
@@ -224,16 +224,16 @@
                 <div class="card-body ">
                     <h1 id="about_me" class="card-title text-center text-warning">About Me</h1>
                     <h6 class="card-title text-center">I would like to use this space to share some information
-                        about me, both as a player and a person. Not sure how many people
-                    is actually interested about any side information, so I will also add something
+                        about me, both as a player and as a person. Not sure how many people
+                    are actually interested in any side information, so I will also add something
                     about my YouTube channel and this website.<br><br>My name is David, I come from
-                        Slovakia, it's beautiful capital city Bratislava and I'm a computer science student.<br><br>
-                    This website was created as my hobby, free-time project coming from an idea of creating
+                        Slovakia, its beautiful capital city Bratislava and I'm a computer science student.<br><br>
+                    This website was created as my hobby, free-time project, originally coming from the idea of creating
                     a very first interactive database of all buildings from the game Elvenar, published
-                        by InnoGames. Since it's initial launch in March 2021 I keep updating the website,
+                        by InnoGames. Since its initial launch in March 2021 I keep updating the website,
                         for both - updating the database with the newest buildings from all the introduced events
                         and updating the existing code for adding new features and additional improvements.<br><br>
-                        You may also know my YouTube channel - iDavis. I started creating this channel back in
+                        You may also know my YouTube channel - iDavis. I started developing this channel back in
                         February 2019, with the initial idea of sharing a gameplay video from the event at
                         that time. Over time the creation of my videos went across many different topics and ideas.
                         Currently, I have several brand new ideas for the upcoming videos,
