--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1/css/custom-05122021.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1/css/custom_v2.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
 
@@ -146,6 +146,9 @@
     <div class="row">
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
+                <li><strong>Filter for set buildings introduced!</strong> You can now filter buildings by sets after choosing a set name in the updated All Buildings page (January 6th 2022)</li>
+                <li><strong>Quests are now officially introduced!</strong> You can now display a quest list for every event from now on. These quests also contain interactive features as well as a functionality of adding more languages in the future, so that they can be easily understood in many communities! (January 6th 2022)</li>
+                <li><strong>Forbidden Ruins event arrived!</strong> All buildings from this event are now in the database (January 6th 2022)</li>
                 <li><strong>Improved navigation bar!</strong> There were some changes made to the navigation bar to make it more responsive for mobile devices - no content overlapping anymore (December 5th 2021)</li>
                 <li><strong>Chapter 19 arrived!</strong> All buildings have been regenerated to contain values for chapter 19 (November 11th 2021)</li>
                 <li><strong>New tooltips!</strong> Many new tooltips have been added to the website - you can now hover your mouse over different goods and find what they are (November 11th 2021)</li>
