DE translations, quests headers

--- a/events.html
+++ b/events.html
@@ -48,6 +48,7 @@
     <script src="database/quests.js"></script>
     <script src="database/languages/quests_translationsHandler.js"></script>
     <script src="database/languages/quests_translationsDictionary.js"></script>
+    <script src="database/languages/quests_headers.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
