--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     <div class="row">
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
+                <li><strong>The Buried City event arrived!</strong> All buildings from this event are now in the database (February 3rd 2022)</li>
                 <li><strong>Filter for set buildings introduced!</strong> You can now filter buildings by sets after choosing a set name in the updated All Buildings page (January 6th 2022)</li>
                 <li><strong>Quests are now officially introduced!</strong> You can now display a quest list for every event from now on. These quests also contain interactive features as well as a functionality of adding more languages in the future, so that they can be easily understood in many communities! (January 6th 2022)</li>
                 <li><strong>Forbidden Ruins event arrived!</strong> All buildings from this event are now in the database (January 6th 2022)</li>
@@ -173,6 +174,7 @@
         <div class="col-md-6 col-sm-1 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_videos" class="col-md">
                 <li><strong>Videos on my channel</strong> - subscribe to stay with the latest videos! ><a href="https://www.youtube.com/channel/UCRzBOCps1xnc1h8xhNK2hzg?sub_confirmation=1"><img src="https://i.ibb.co/p1CLn99/EL-str-nka-youtube-button.png" width="30" style="position: relative;"></a><</li>
+                <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/nB6yfF73Fyg" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/n6alE-lETxc" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/sWa4cT4yGIA" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/aUgB0IihzLY" allowfullscreen="true"></iframe>
