--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
-            <div id="column_with_news" class="col-md">
+            <div
+             id="column_with_news" class="col-md">
+                <li><strong>Dawn of the Phoenix event arrived!</strong> All buildings from this event are now in the database (March 17th 2022)</li>
                 <li><strong>The Buried City event arrived!</strong> All buildings from this event are now in the database (February 3rd 2022)</li>
                 <li><strong>Filter for set buildings introduced!</strong> You can now filter buildings by sets after choosing a set name in the updated All Buildings page (January 6th 2022)</li>
                 <li><strong>Quests are now officially introduced!</strong> You can now display a quest list for every event from now on. These quests also contain interactive features as well as a functionality of adding more languages in the future, so that they can be easily understood in many communities! (January 6th 2022)</li>
