--- a/events.html
+++ b/events.html
@@ -143,7 +143,7 @@
     </button>
 </div>
 
-<div class="highest2 container bg-skin_background rounded-right75 border-bottom border-right border-top border-popup" style="width: 155px; height: 100px; margin-top: 274px; margin-left: 0px; position: fixed" id="left_bar">
+<div class="hide-show highest2 container bg-skin_background rounded-right75 border-bottom border-right border-top border-popup" style="width: 155px; height: 100px; margin-top: 274px; margin-left: 0px; position: fixed" id="left_bar">
     <div class="justify-content-center box d-flex flex-column" style="height: 50%;"><span class="align-middle"><a class="text-link font-weight-bold" id="calendar_top" href="#calendar" onclick="switchView('calendar')"><img src="images/general/calendar.png" width="45" style="margin-left: -10px; margin-right: 2px; position: relative;"></a></span></div>
     <div class="justify-content-center box d-flex flex-column" style="height: 50%;"><span class="align-middle"><a class="text-link font-weight-bold" id="quests_left_panel" href="#quests" onclick="switchView('quests')"><img src="images/general/event_guide.png" width="28" style="margin-left: 0px; margin-right: 10px; position: relative;"></a></span></div>
     <!--<div class="justify-content-center box d-flex flex-column" style="height: 33%;"><span class="align-middle"><a class="text-link font-weight-bold" id="chests_left_panel" href="#events_top"><img src="images/general/chest_icon.png" width="30" style="margin-left: 5px; margin-right: 10px; position: relative;"></a></span></div>-->
@@ -199,7 +199,22 @@
     </div>
 </div>
 
+<center><button class="btn btn-sm btn-astable btn-outline-astable toggle-bar" id="side_bar_button" style="margin-top: 10px; margin-bottom: -10px;">▲ Hide Panel</button></center>
+
 <script>
+
+    if ($(window).width() > 990) {
+        document.getElementById("side_bar_button").style.display = "none";
+    }
+
+    $('.hide-show').show();
+    $('.toggle-bar').on('click',function() {					
+        $(this).text(function(_,currentText){
+            return currentText == "▲ Hide Panel" ? "▼ Show Panel" : "▲ Hide Panel";
+        });
+        $('.hide-show').toggle('slow');
+    });
+    
     document.getElementById("select_event_label").innerHTML = langUI("Select event:");
     document.getElementById("order_daily_prizes_by_label").innerHTML = langUI("Order daily prizes by:");
     document.getElementById("calendar_top").innerHTML += langUI("Calendar");
